# msp430-usbapi

./: .gitignore
descriptors/ebs-c1-msp430/: UsbIsr.c  descriptors.c  descriptors.h
src/: CMakeLists.txt  README.md
src/USB_API/: CMakeLists.txt
src/USB_API/USB_CDC_API/: UsbCdc.c  UsbCdc.h
src/USB_API/USB_Common/: usb.c  usb.h  usbdma.c
src/USB_API/USB_HID_API/: UsbHid.c
src/USB_API/USB_MSC_API/: UsbMsc.h  UsbMscScsi.c
src/USB_app/: usbEventHandling.c
src/USB_config/: CMakeLists.txt  MSP430_CDC.inf  UsbIsr.c  descriptors.c  descriptors.h
