CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(msp430-usbdevpack C)
SET(msp430-usbdevpack_VERSION_MAJOR 5)
SET(msp430-usbdevpack_VERSION_MINOR 10)
SET(msp430-usbdevpack_VERSION_PATCH 00)
SET(msp430-usbdevpack_VERSION_TWEAK 17)

SET(TMP_PROJECT_DESCRIPTION "USB Developers Package for MSP430 provided by TI"
        CACHE STRING "Project Description")

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR} ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/USB_config ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/USB_app ${INCLUDE_DIRECTORIES}")
ADD_SUBDIRECTORY(USB_API)
